--- a/Maze Dungeon Game/Maze Dungeon Game/Maze Dungeon Game.vcxproj
+++ b/Maze Dungeon Game/Maze Dungeon Game/Maze Dungeon Game.vcxproj
@@ -127,7 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="Maze Dungeon Game.cpp" />
+    <ClCompile Include="Maze.cpp" />
+    <ClCompile Include="Tile.cpp" />
+    <ClCompile Include="Utility.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="Maze.h" />
+    <ClInclude Include="Tile.h" />
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
