--- a/Maze Dungeon Game/Maze Dungeon Game/Maze Dungeon Game.vcxproj
+++ b/Maze Dungeon Game/Maze Dungeon Game/Maze Dungeon Game.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="Maze Dungeon Game.cpp" />
     <ClCompile Include="Maze.cpp" />
     <ClCompile Include="Tile.cpp" />
@@ -135,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="Maze.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="Utility.h" />
