--- a/Maze Dungeon Game/Maze Dungeon Game/Maze Dungeon Game.vcxproj
+++ b/Maze Dungeon Game/Maze Dungeon Game/Maze Dungeon Game.vcxproj
@@ -127,6 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Autosolver.cpp" />
+    <ClCompile Include="Container.cpp" />
     <ClCompile Include="Door.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
@@ -137,10 +139,13 @@
     <ClCompile Include="Maze.cpp" />
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Stack.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Autosolver.h" />
+    <ClInclude Include="Container.h" />
     <ClInclude Include="Door.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
@@ -150,6 +155,7 @@
     <ClInclude Include="Maze.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Stack.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
